# mux

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.devcontainer/: .clang-format  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/nw_node/: Dockerfile
.github/workflows/: build.yaml  build.yml  docs.yml
cmake/: third_party.cmake  utils.cmake
cmake/toolchains/: x86_64-pc-windows-msvc.cmake
docs/: Doxyfile.in  conf.py  index.rst
docs/api/: socket.rst
src/: logger.cpp  logger.h  main.cpp  socket.cpp
src/client/: CMakeLists.txt  main.cpp
src/core/: socket.cpp  socket.h
src/server/: CMakeLists.txt  main.cpp
tests/component/: mux_test.py
